[tool.poetry]
name = "cardano-balance"
version = "0.1.0"
description = "Display the cardano balance for a given staking adress"
authors = ["yoms <hormiere.guillaume@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.2"
click = "^7.1.2"
tabulate = "^0.8.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
